# JKA_YBEProxy

./: .gitignore  CMakeLists.txt  CreateVisualStudio2015Projects.bat  CreateVisualStudio2015Projects_x64.bat  CreateVisualStudio2015Projects_x86.bat  CreateVisualStudio2017Projects.bat  CreateVisualStudio2017Projects_x64.bat  CreateVisualStudio2017Projects_x86.bat  CreateVisualStudio2019Projects.bat  CreateVisualStudio2019Projects_x64.bat  CreateVisualStudio2019Projects_x86.bat  CreateVisualStudio2022Projects_x64.bat  CreateVisualStudio2022Projects_x86.bat  README.md
CMakeModules/: GetGitRevisionDescription.cmake  LICENSE_1_0.txt  MSVCRuntime.cmake
CMakeModules/Toolchains/: i686-w64-mingw32.cmake  linux-i686.cmake  x86_64-w64-mingw32.cmake
YBEJKA_Proxy/: CMakeLists.txt  Proxy_Header.h  Proxy_Imports.c  Proxy_Main.c  Proxy_Wrappers.c  YBEJKA_Proxy.sln  YBEJKA_Proxy.vcxproj  YBEJKA_Proxy.vcxproj.filters
YBEJKA_Proxy/JKA_SDK/game/: bg_public.h  bg_vehicles.h  bg_weapons.h  g_local.h  q_shared.h  teams.h
YBEJKA_Proxy/YBEJKA_Proxy/: Proxy_SystemCalls.c  YBEJKA_Proxy.vcxproj
src/: CMakeLists.txt
src/JKA_YBEProxy/: Proxy_CVars.cpp  Proxy_CVars.hpp  Proxy_ClientCommand.c  Proxy_ClientCommand.cpp  Proxy_ClientCommand.hpp  Proxy_EnginePatch.c  Proxy_EnginePatch.h  Proxy_Files.c  Proxy_Files.cpp  Proxy_Files.hpp  Proxy_Header.h  Proxy_Header.hpp  Proxy_Imports.c  Proxy_Imports.cpp  Proxy_Main.c  Proxy_Main.cpp  Proxy_Main.hpp  Proxy_NewAPIWrappers.c  Proxy_NewAPIWrappers.cpp  Proxy_OldAPIWrappers.c  Proxy_OldAPIWrappers.cpp  Proxy_Patch.c  Proxy_Patch.cpp  Proxy_Patch.h  Proxy_Server.c  Proxy_Server.cpp  Proxy_Server.h  Proxy_Server.hpp  Proxy_SharedAPI.c  Proxy_SharedAPI.cpp  Proxy_SharedAPI.hpp  Proxy_Shell.h  Proxy_Shell.hpp  Proxy_SystemCalls.c  Proxy_SystemCalls.cpp  Proxy_Translate_GameCalls.cpp  Proxy_Translate_SystemCalls.cpp  Proxy_Translate_SystemCalls.hpp  Proxy_Wrappers.c
src/JKA_YBEProxy/DetourPatcher/: DetourPatcher.c  DetourPatcher.cpp  DetourPatcher.h  DetourPatcher.hpp  ldisasm.hpp
src/JKA_YBEProxy/DetourPatcher/LengthDisassembler/: hde.hpp
src/JKA_YBEProxy/DetourPatcher/LengthDisassembler/x64/: hde64.cpp  hde64.hpp
src/JKA_YBEProxy/DetourPatcher/LengthDisassembler/x86/: hde32.cpp  hde32.hpp
src/JKA_YBEProxy/EnginePatch/: Prox_sv_snapshot.c  Proxy_EnginePatch.h  Proxy_EnginePatch.hpp  Proxy_Server.c  Proxy_Server.h  Proxy_common.cpp  Proxy_sv_ccmds.cpp  Proxy_sv_client.c  Proxy_sv_client.cpp  Proxy_sv_game.c  Proxy_sv_game.cpp  Proxy_sv_main.c  Proxy_sv_main.cpp  Proxy_sv_snapshot.c  Proxy_sv_snapshot.cpp
src/JKA_YBEProxy/EnginePatch/common/: Proxy_common.cpp  Proxy_files.cpp
src/JKA_YBEProxy/Imports/game/: g_cmds.cpp  g_cmds.hpp
src/JKA_YBEProxy/Imports/qcommon/: cvar.cpp  cvar.hpp
src/JKA_YBEProxy/Imports/server/: sv_game.cpp  sv_game.hpp
src/JKA_YBEProxy/RuntimePatch/Engine/: Proxy_Engine_Client.cpp  Proxy_Engine_Client.hpp  Proxy_Engine_ClientCommand.cpp  Proxy_Engine_ClientCommand.hpp  Proxy_Engine_Patch.cpp  Proxy_Engine_Patch.hpp  Proxy_Engine_Utils.hpp  Proxy_Engine_Wrappers.cpp  Proxy_Engine_Wrappers.hpp
src/JKA_YBEProxy/RuntimePatch/Engine/Patches/qcommon/: Proxy_cmd.cpp  Proxy_cmd.hpp  Proxy_common.cpp  Proxy_common.hpp  Proxy_files.cpp  Proxy_files.hpp
src/JKA_YBEProxy/RuntimePatch/Engine/Patches/server/: Proxy_sv_ccmds.cpp  Proxy_sv_ccmds.hpp  Proxy_sv_client.cpp  Proxy_sv_client.hpp  Proxy_sv_game.cpp  Proxy_sv_game.hpp  Proxy_sv_main.cpp  Proxy_sv_main.hpp  Proxy_sv_snapshot.cpp  Proxy_sv_snapshot.hpp
src/JKA_YBEProxy/RuntimePatch/HookUtils/: HookUtils.cpp  HookUtils.hpp
src/JKA_YBEProxy/RuntimePatch/HookUtils/LengthDisassembler/: hde.hpp
src/JKA_YBEProxy/RuntimePatch/HookUtils/LengthDisassembler/x64/: hde64.cpp  hde64.hpp  table64.hpp
src/JKA_YBEProxy/RuntimePatch/HookUtils/LengthDisassembler/x86/: hde32.cpp  hde32.hpp  table32.hpp
src/JKA_YBEProxy/Wrappers/: Proxy_OpenJKAPI_Wrappers.cpp  Proxy_OpenJKAPI_Wrappers.hpp  Proxy_OriginalAPI_Wrappers.cpp  Proxy_OriginalAPI_Wrappers.hpp
src/game/: b_public.hpp  bg_public.hpp  bg_vehicles.hpp  g_local.hpp  g_public.h  g_public.hpp  teams.hpp
src/qcommon/: game_version.hpp  q_color.hpp  q_math.hpp  q_platform.hpp  q_shared.h  q_shared.hpp  q_string.h  q_string.hpp  qcommon.h  qcommon.hpp
src/sdk/game/: bg_public.hpp  bg_vehicles.hpp  g_local.hpp  g_public.hpp  teams.hpp
src/sdk/qcommon/: files.cpp  q_math.hpp  q_shared.cpp  q_shared.hpp  q_string.cpp  q_string.hpp  qcommon.hpp
src/sdk/server/: server.hpp  sv_client.cpp  sv_client.hpp
src/sdk/sys/: sys_public.hpp
src/server/: server.h  server.hpp
src/sys/: sys_public.h  sys_public.hpp
